docs/7.56/md/abencds_to_parent_assoc_v1.md
---
title: "CDS DDL - DDIC-based View, ASSOCIATION TO PARENT"
description: |
  Syntax ... ASSOCIATION TO PARENT target AS _assoc ON $projection.cds_cond(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_conditional_expression_v1.htm) ... Effect A CDS to-parent association(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abento_parent_as
version: "7.56"
category: "cds"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_to_parent_assoc_v1.htm"
abapFile: "abencds_to_parent_assoc_v1.htm"
keywords: ["select", "delete", "do", "while", "if", "case", "try", "data", "abencds", "parent", "assoc"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Core Data Services (ABAP CDS)](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds.htm) →  [ABAP CDS - Data Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_entities.htm) →  [ABAP CDS - DDL for Data Definitions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_ddl_syntax.htm) →  [ABAP CDS - CDS Entities](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_view_entity.htm) →  [ABAP CDS - DDIC-Based Entities](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_ddic_entity.htm) →  [ABAP CDS - DDIC-Based Views](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_v1_views.htm) →  [CDS DDL - DEFINE VIEW ddic\_based](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_define_view_v1.htm) →  [CDS DDL - DDIC-based View, SELECT](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_select_statement_v1.htm) →  [CDS DDL - DDIC-Based View, SELECT, Associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_v1.htm) → 

CDS DDL - DDIC-based View, ASSOCIATION TO PARENT

Syntax

... ASSOCIATION TO PARENT target *\[*AS \_assoc*\]* ON $projection.[cds\_cond](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_conditional_expression_v1.htm) ...

Effect

A [CDS to-parent association](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abento_parent_association_glosry.htm "Glossary Entry") in [ABAP CDS](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_core_data_services_glosry.htm "Glossary Entry") is a specialized [CDS association](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_association_glosry.htm "Glossary Entry"). It is the counterpart of a [CDS composition](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_composition_glosry.htm "Glossary Entry"). A CDS composition is defined in the [parent entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenparent_entity_glosry.htm "Glossary Entry") and points to the [child entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenchild_entity_glosry.htm "Glossary Entry"), while a CDS to-parent association in defined in the child entity and points to the parent entity. Both parent and child entity must define mutual associations. Compositions and to-parent associations together define the [CDS composition tree](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_composition_tree_glosry.htm "Glossary Entry") of a [RAP business object](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrap_bo_glosry.htm "Glossary Entry") in the context of the [ABAP RESTful Application Programming Model](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenarap_glosry.htm "Glossary Entry").

A to-parent association is defined in a [SELECT statement](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_select_statement_v1.htm) of a [CDS DDIC-based view](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_v1_view_glosry.htm "Glossary Entry") using the keyword ASSOCIATION TO PARENT. A to-parent association associates the current CDS entity, as [association source](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_source_glosry.htm "Glossary Entry"), with the [association target](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_target_glosry.htm "Glossary Entry") target specified in the definition of the association.

The child entity must always define a to-parent association first and only afterwards can a [CDS composition](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_composition_v1.htm) be defined in the parent entity. The other way around results in a syntax error. The to-parent association cannot be deleted as long as the child entity is the target of the composition. The composition must be deleted first and then the to-parent association can be deleted.

Rules

CDS to-parent associations are defined similarly to CDS associations. Here are the similarities and differences:

-   Similarities
    -   For the name AS \_assoc, the same rules apply as for normal CDS associations, see topic [CDS DDL - DDIC-based View, ASSOCIATION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_simple_association_v1.htm).
    -   An ON condition must be defined. The rules for ON conditions of to-parent associations are listed below.
-   Differences
    -   A default filter cannot be defined for a to-parent association. The syntax ... WITH DEFAULT FILTER ... is not allowed.
    -   The [cardinality](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencardinality_glosry.htm "Glossary Entry") cannot be defined explicitly for to-parent associations and is generated as \[1..1\].

The following applies to the association target target:

-   The association target can be another [CDS view entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_v2_view_glosry.htm "Glossary Entry"), a [CDS DDIC-based view](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_v1_view_glosry.htm "Glossary Entry"), a [CDS projection view](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_projection_view_glosry.htm "Glossary Entry"), an [abstract entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_abstract_entity_glosry.htm "Glossary Entry"), or a [custom entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_custom_entity_glosry.htm "Glossary Entry").
-   The [association target](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenassociation_target_glosry.htm "Glossary Entry") of a to-parent association cannot be the CDS entity in which the to-parent association is defined. This means that to-parent associations cannot be [self associations](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenself_association_glosry.htm "Glossary Entry").
-   The target entity of a CDS composition and a to-parent association defined in the same data definition must be different entities.

General rules for child entities:

-   A child entity must define exactly one to-parent association to its parent entity.
-   A child entity that is the target of a CDS composition can itself be a parent entity and define further CDS compositions.
-   A [root entity](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenroot_entity_glosry.htm "Glossary Entry") cannot define any to-parent associations.
-   The child entity in which the to-parent association is defined must have at least one [key field](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenkey_field_glosry.htm "Glossary Entry").

Exposure:

-   The name of the to-parent association \_assoc must be added exactly once to the [select\_list](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_select_list_v1.htm) of the CDS view it is defined in, without attributes and alias. If no name is defined for the to-parent association, the name of the to-parent association is the name of the target entity target and this name must be made available in the SELECT list.

Usage:

-   A to-parent association can be propagated in data definitions other than the one in which it is defined. In this case, the to-parent association uses its special semantics and is treated like a normal CDS association.
-   To-parent associations can be used in [path expressions](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_path_expression_v1.htm) locally and also in other CDS entities in which they are propagated.
-   To-parent associations can be specified as values for [AssociationRef](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_f1_define_annotation_type.htm) associations. These to-parent associations are then handled as associations.

To-parent associations and joins:

-   All use cases and details about join generation described in topic [CDS DDL - DDIC-based View, Associations and Joins](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_assoc_join_v1.htm) also apply to to-parent associations.

Restrictions:

-   To-parent associations can't be defined in a [CDS view extension](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_view_extend_glosry.htm "Glossary Entry"), neither with [EXTEND VIEW](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_extend_view.htm), nor with [EXTEND VIEW ENTITY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_extend_view.htm).

ON condition

A to-parent association must define an ON condition. This ON condition is automatically used for the respective CDS composition in the parent entity.

The following rules apply to the operands and syntax of the ON condition:

-   Only [key fields](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenkey_field_glosry.htm "Glossary Entry") of the parent entity can be used in the ON condition.
-   The ON condition must use all key fields of the parent entity. Each one can be used only once in the ON condition.
-   Key fields of the parent entity can only be compared with fields of the child entity.
-   A field of the child entity can be used only once.
-   The fields of the association source must be prefixed by $projection.
-   The fields of the association target must be prefixed by the name of the CDS to-parent association (prefix \_assoc. separated by a period).
-   Only the [comparison operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_cond_expr_comp_v1.htm) "=" is allowed. No other [relational operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenrel_operator_glosry.htm "Glossary Entry") or comparison operator is allowed.
-   Only the [Boolean operator](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenboolean_operator_glosry.htm "Glossary Entry") AND is allowed. Negations using NOT are not allowed.
-   lhs can be a field of the association source or association target.
-   rhs can be a field of the association source or association target.
-   Path expressions, expressions, built-in functions, and elementary operands are not allowed.
-   All fields that are used in the ON condition must be listed in the SELECT list.

Hints

-   A node that defines a to-parent association is not automatically a child entity of the business object. A node is only a child entity of the business object when it is the target of a composition.
-   To-parent associations can be given annotations in the [element list](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_select_list_entry_v1.htm) of the CDS entity in which they are defined.
-   Defining new to-parent associations is not supported in [UNION](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencds_union_v1.htm) views.

Example

The CDS view DEMO\_SALES\_CDS\_SO\_I\_SL shown below returns information about schedule lines of sales order items. It defines a to-parent association to the CDS view DEMO\_SALES\_CDS\_SO\_I that contains information about sales orders.

In the SELECT list, the to-parent association \_SalesOrderItem is exposed, so it can be accessed from external CDS entities.

@AbapCatalog.sqlViewName: 'DEMO\_SALES\_SL'
@AbapCatalog.compiler.compareFilter: true
@AbapCatalog.preserveKey: true
@AccessControl.authorizationCheck: #CHECK
@EndUserText.label: 'SDDL: Interface (BO) View for SOI SL'
define view DEMO\_SALES\_CDS\_SO\_I\_SL
  as select from
    demo\_sales\_so\_sl
    association to parent DEMO\_SALES\_CDS\_SO\_I as \_SalesOrderItem
      on $projection.parent\_key = \_SalesOrderItem.so\_item\_key
    {
      key schedule\_line\_key,
          so\_item\_key as parent\_key,
          parent\_key  as root\_key,
          \_SalesOrderItem
    }